todo: make added component show up